@@ -8,6 +8,7 @@
 - Integrated Chunk Loaders recipes into progression
 - Changed the recipe for diamondium to require filling with more molten steel rather than lava
 - Changed coal products to be valid fuel. Crushed coal will smelt 8 items, refined coal dust 1 item, and coke 12 items
+- Increased durability on diamond and netherite tools
 
 -= Bugfixes =-
 - Fixed an issue where the diamond chisel could not be crafted
